# cardiff

./: .gitignore  setup.cfg
cardiff/: check.py  cmd.py  compare_sets.py
cardiff/tests/: test_check.py  test_perf_level.py
