[metadata]
name = cardiff
summary = Analyze AHC reports
author = Red Hat
version = 0.9.0
description-file =
    README.md
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    cardiff

[entry_points]
console_scripts =
    cardiff = cardiff.cmd:main
